button spacing alignment fix, form spacing update

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -8,8 +8,8 @@
     top: 0;
     left: 0;
     padding: .5rem;
-    margin-left: .5rem;
-    margin-right: .5rem;
+    margin-left: .25rem;
+    margin-right: 1rem;
     border-radius: .25rem;
     border-style: none;
 
