--- a/src/components/Pages/CreateProfile/createprofile.scss
+++ b/src/components/Pages/CreateProfile/createprofile.scss
@@ -8,7 +8,7 @@
 .#{$prefix}-pc-input-container {
     display: flex;
     flex-direction: column;
-    padding: .5rem;
+    padding: 1rem .5rem;
 }
 
 .#{$prefix}-pc-button-container {
